# zenoh_d3ai_trial

./: Dockerfile  README.md
zenoh_c/: .gitignore  CMakeLists.txt  pub.c  sub.c
zenoh_pico/: platformio.ini
zenoh_pico/src/: main.cpp
